--- a/Portfolio_PSchnell/src/components/About.css
+++ b/Portfolio_PSchnell/src/components/About.css
@@ -21,6 +21,10 @@ background-color: #444952;
 color: white;
 }
 
+/* .about-section h1 {
+    border-bottom: 2px solid #66b2b2;
+} */
+
 .about-section img {
     max-width: 200px;
     border-radius: 100px;
@@ -29,17 +33,49 @@ color: white;
 
 .stack-container {
 display: flex;
-height: 500px;
+height: 600px;
 width: 500px;
+flex-direction: column;
 justify-content: center;
 align-items: center;
 border: 2px solid #66b2b2;
 border-radius: 50px;
 background-color: #444952;
-color: white;        
+color: white;
+/* border: 2px solid white; */
+}
+
+
+#stack-header {
+    font-size: 25px;
+    border-bottom: 2px solid #66b2b2;
+    /* padding: 0 0 30px 0; */
+    /* text-decoration: underline #66b2b2 ; */
+}
+
+
+.stack-icons {
+    height: 75%;
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(4, 50px);
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* border: 2px solid white; */
+    object-fit: contain;
 }
 
 .stack-container img {
-    max-width: 50px;
-    /* object-fit: contain; */
+    width: 60px;
 }
+
+.prop-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 8px;
+}
+
