--- a/Portfolio_PSchnell/src/index.css
+++ b/Portfolio_PSchnell/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
