Added button functionality for Nav-bar, while also changing overall style for later implementation and refining.

--- a/Portfolio_PSchnell/src/index.css
+++ b/Portfolio_PSchnell/src/index.css
@@ -5,8 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  /* background-color: #242424; */
-  background-image: url('background.jpg');
+  background-color: #242424;
+  /* background-color: #213547; */
   background-size: contain;
 
   font-synthesis: none;
