--- a/Portfolio_PSchnell/src/components/Headers.css
+++ b/Portfolio_PSchnell/src/components/Headers.css
@@ -8,6 +8,20 @@
     font-size: 25px;
     /* border: 2px solid white; */
     padding: 150px 0px;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+        scale: 0.5;
+    }
+    to {
+        opacity: 1;
+        scale: 1;
+    }
 }
 
 .headers-box {
