--- a/Portfolio_PSchnell/src/components/Projects.css
+++ b/Portfolio_PSchnell/src/components/Projects.css
@@ -4,7 +4,20 @@ width: 100%;
 display: flex;
 flex-direction: row;
 justify-content: space-evenly;
+animation: appear linear;
+animation-timeline: view();
+animation-range: entry 0% cover 40%;
+}
 
+@keyframes appear {
+    from {
+        opacity: 0;
+        scale: 0.5;
+    }
+    to {
+        opacity: 1;
+        scale: 1;
+    }
 }
 
 .image-container img {
