--- a/Portfolio_PSchnell/src/components/hero.css
+++ b/Portfolio_PSchnell/src/components/hero.css
@@ -1,12 +1,17 @@
 .hero-container {
     height: 1300px;
     width: 100%;
-    background-color: #444952;
+    background-image: url(background2.jpg);
+    background-size: 100vw 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     /* border: 2px solid black; */
+}
+
+.hero-container background= {
+    width: 50%;
 }
 
 #hero-header {
