Added an image scroller from a tutorial online, but need to alter it to fit different objects.

--- a/Portfolio_PSchnell/src/components/Projects.css
+++ b/Portfolio_PSchnell/src/components/Projects.css
@@ -26,6 +26,13 @@ border: 2px solid #444952;
 border-radius: 50px;
 }
 
+/* .image-container {
+    max-height: 100%;
+    width: 1200px;
+    border: 2px solid #444952;
+    border-radius: 50px;
+} */
+
 .project-info {
 max-width: 500px;
 max-height: fit-content;
