--- a/Portfolio_PSchnell/src/components/Projects.css
+++ b/Portfolio_PSchnell/src/components/Projects.css
@@ -41,3 +41,14 @@ border: 2px solid #66b2b2;
 border-radius: 50px;
 padding: 50px 50px;
 }
+
+.scroller-controls {
+    height: 50px;
+    border: 0;
+    outline: none;
+}
+
+.scroller-controls img {
+    border: 0;
+    outline: none;
+}
