--- a/Portfolio_PSchnell/src/components/Nav.css
+++ b/Portfolio_PSchnell/src/components/Nav.css
@@ -4,12 +4,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 120px;
+    /* margin: 10px 120px; */
+    padding: 0 50px 0 0;
     color: white;
     position: sticky;
     top: 0;
     z-index: 9999;
-    background-color: #242424;
+    background-color: black;
+    opacity: 85%;
+    box-shadow: 0px 5px #66b2b2;
 }
 
 .logo {
