--- a/Portfolio_PSchnell/src/components/Projects.css
+++ b/Portfolio_PSchnell/src/components/Projects.css
@@ -6,7 +6,10 @@ flex-direction: row;
 justify-content: space-evenly;
 animation: appear linear;
 animation-timeline: view();
-animation-range: entry 0% cover 40%;
+animation-range: entry 0% cover 30%;
+/* border: 2px solid black; */
+margin-top: 100px;
+
 }
 
 @keyframes appear {
@@ -26,29 +29,47 @@ border: 2px solid #444952;
 border-radius: 50px;
 }
 
-/* .image-container {
-    max-height: 100%;
-    width: 1200px;
-    border: 2px solid #444952;
+.image-container {
+    max-height: 720px;
+    background-color: black;
+    border: 5px solid #66b2b2;
     border-radius: 50px;
-} */
+    padding: 50px;
+}
 
 .project-info {
 max-width: 500px;
 max-height: fit-content;
-background-color: #444952;
+background-color: black;
 border: 2px solid #66b2b2;
 border-radius: 50px;
 padding: 50px 50px;
+background-color: rgba(0, 0, 0, 0.5);
+box-shadow: -10px -10px #66b2b2;
+}
+
+.project-info p {
+    font-size: 20pt;
+}
+
+.project-info h1 {
+    text-decoration: underline;
 }
 
 .scroller-controls {
     height: 50px;
     border: 0;
     outline: none;
+    /* background-color: blue; */
 }
 
 .scroller-controls img {
     border: 0;
     outline: none;
 }
+
+/* .scroller-box {
+    border: 0;
+    outline: none;
+    background-image: ;
+} */
