--- a/Portfolio_PSchnell/src/components/hero.css
+++ b/Portfolio_PSchnell/src/components/hero.css
@@ -1,7 +1,7 @@
 .hero-container {
     height: 1300px;
     width: 100%;
-    background-image: url(background2.jpg);
+    /* background-image: url(background2.jpg); */
     background-size: 100vw 100vh;
     display: flex;
     flex-direction: column;
@@ -11,6 +11,6 @@
 }
 
 #hero-header {
-    max-width: 575px;
-    font-size: 50px;
+    max-width: 30%;
+    font-size: 80pt;
 }
